--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,52 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>REST COUNTRIES</title>
+    <title>
+      Frontend Mentor | REST Countries API with color theme switcher
+    </title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;700;800&display=swap"
       rel="stylesheet"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="images/favicon-32x32.png"
+    />
+    <meta
+      property="og:url"
+      content="https://countries.marcomadera.vercel.app/"
+    />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="@madera_marco" />
+    <meta name="twitter:site" content="@madera_marco" />
+    <meta property="og:title" content="Where in the world?" />
+    <meta name="twitter:title" content="Where in the world?" />
+    <meta
+      name="description"
+      content="A list of all the countries in the world, find information about the country"
+    />
+    <meta
+      property="og:description"
+      content="A list of all the countries in the world, find information about the country"
+    />
+    <meta
+      name="twitter:description"
+      content="A list of all the countries in the world, find information about the country"
+    />
+    <meta
+      name="twitter:image"
+      content="https://countries.marcomadera.vercel.app/images/image.jpg"
+    />
+    <meta
+      property="og:image"
+      content="https://countries.marcomadera.vercel.app/images/image.jpg"
     />
   </head>
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="app"></div>
   </body>
 </html>
