--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       Frontend Mentor | REST Countries API with color theme switcher
     </title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;700;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700;800&display=swap"
       rel="stylesheet"
     />
     <link
