--- a/public/404.html
+++ b/public/404.html
@@ -1,9 +1,10 @@
-  
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Marco Madera | Ingeniero</title>
+    <title>
+      Frontend Mentor | REST Countries API with color theme switcher
+    </title>
     <script type="text/javascript">
       var segmentCount = 0;
       var l = window.location;
